--- a/app/src/main/res/layout/add_info.xml
+++ b/app/src/main/res/layout/add_info.xml
@@ -12,7 +12,7 @@
         android:layout_marginTop="150dp"
         android:layout_marginLeft="50dp"
         android:layout_marginRight="50dp"
-        android:text="Product "
+        android:hint="Product "
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
